--- a/root/templates/base.html
+++ b/root/templates/base.html
@@ -8,15 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <header class="d-flex justify-content-center py-3">
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a href="#" class="nav-link active">Login</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Take Order</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Orders</a></li>
-      </ul>
-    </header>
+    {% include 'partials/_navbar.html' %}
     <main>
-      <div class="row">
+      {% block content %}
+      <div class="container mt-4">
+        <div class="row">
         <div class="col-md-6 mx-auto">
           <div class="card">
             <div class="card-header bg-primary text-white">
@@ -36,17 +32,11 @@
             </div>
           </div>
         </div>
-      </div>
-    </main>
-    <footer>
-      <div class="footer py-3 mt-3">
-        <div class="container">
-            <span class="text-muted">
-              © 2024 Company, Inc
-            </span>
         </div>
-    </div>
-    </footer>
+      </div>
+      {% endblock %}
+    </main>
+    {% include 'partials/_footer.html' %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
