--- a/root/templates/base.html
+++ b/root/templates/base.html
@@ -11,29 +11,32 @@
     {% include 'partials/_navbar.html' %}
     <main>
       {% block content %}
-      <div class="container mt-4">
-        <div class="row">
-        <div class="col-md-6 mx-auto">
-          <div class="card">
-            <div class="card-header bg-primary text-white">
-              <h4>Login</h4>
+        <form method="post" action="{% url 'tables' %}">
+          {% csrf_token %}
+          <div class="container mt-4">
+            <div class="row">
+            <div class="col-md-6 mx-auto">
+              <div class="card">
+                <div class="card-header bg-primary text-white">
+                  <h4>Login BASE </h4>
+                </div>
+                <div class="card-body">
+                  <div class="form-group">
+                    <label for="username" class="form-group">Username</label>
+                    <input type="text" name= 'username' class="form-control">
+                  </div>
+                  <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="text" name='password'class="form-control">
+                  </div>
+                  <hr>
+                  <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                </div>
+              </div>
             </div>
-            <div class="card-body">
-              <div class="form-group">
-                <label for="username" class="form-group">Username</label>
-                <input type="text" name= 'username' class="form-control">
-              </div>
-              <div class="form-group">
-                <label for="password">Password</label>
-                <input type="text" name='password'class="form-control">
-              </div>
-              <hr>
-              <button type="submit" class="btn btn-primary btn-block">Submit</button>
             </div>
           </div>
-        </div>
-        </div>
-      </div>
+        </form>
       {% endblock %}
     </main>
     {% include 'partials/_footer.html' %}
