--- a/root/templates/partials/_navbar.html
+++ b/root/templates/partials/_navbar.html
@@ -1,7 +1,13 @@
 <header class="d-flex justify-content-center py-3">
     <ul class="nav nav-pills">
-      <li class="nav-item"><a href="#" class="nav-link active">Login</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">Take Order</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">Orders</a></li>
+      <li class="nav-item">
+        <a href="{% url 'Login' %}" class="nav-link active">Login</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">Take Order</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">Orders</a>
+      </li>
     </ul>
 </header>
