--- a/root/templates/base.html
+++ b/root/templates/base.html
@@ -11,6 +11,7 @@
     {% include 'partials/_navbar.html' %}
     <main>
       {% block content %}
+
         <form method="post" action="{% url 'tables' %}">
           {% csrf_token %}
           <div class="container mt-4">
@@ -27,7 +28,7 @@
                   </div>
                   <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="text" name='password'class="form-control">
+                    <input type="password" name='password'class="form-control">
                   </div>
                   <hr>
                   <button type="submit" class="btn btn-primary btn-block">Submit</button>
@@ -37,6 +38,7 @@
             </div>
           </div>
         </form>
+        
       {% endblock %}
     </main>
     {% include 'partials/_footer.html' %}
