--- a/root/templates/tables/tables.html
+++ b/root/templates/tables/tables.html
@@ -3,7 +3,7 @@
 
 {% block content %}
   <div class="container text-center">
-    <div class="row">
+    <div class="row mt-4">
       <div class="col">
         <div class="btn btn-primary rounded-pill px-3">
           <h3>Table 1</h3>
@@ -19,6 +19,44 @@
       <div class="col">
         <div class="btn btn-primary rounded-pill px-3">
           <h3>Table 3</h3>
+        </div>
+      </div> 
+    </div>
+    <div class="row mt-4">
+      <div class="col">
+        <div class="btn btn-primary rounded-pill px-3">
+          <h3>Table 4</h3>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="btn btn-primary rounded-pill px-3">
+          <h3>Table 5</h3>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="btn btn-primary rounded-pill px-3">
+          <h3>Table 6</h3>
+        </div>
+      </div> 
+    </div>
+    <div class="row mt-4">
+      <div class="col">
+        <div class="btn btn-primary rounded-pill px-3">
+          <h3>Table 7</h3>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="btn btn-primary rounded-pill px-3">
+          <h3>Table 8</h3>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="btn btn-primary rounded-pill px-3">
+          <h3>Table 9</h3>
         </div>
       </div> 
     </div>
