--- a/root/templates/tables/menu.html
+++ b/root/templates/tables/menu.html
@@ -3,6 +3,11 @@
 
 {% block content %}
     <div class="container text-center">
-        <div class="row mt-4 "></div>
+        <div class="row mt-4 ">
+                {% for product in products %}
+                    <h1> {{product.name}}</h1>
+                    <h2>{{product.price}}</h2>
+                {% endfor %}
+        </div>
     </div>
 {% endblock %}
