--- a/root/templates/tables/menu.html
+++ b/root/templates/tables/menu.html
@@ -13,10 +13,18 @@
                             <h2> {{ product.price }}</h2>
                         </div>
                         <div class="col-2">
-                            <div class="btn btn-primary">+</div>
+                            <form method="post" action="{% url 'increase_order' product.id %}">
+                                {% csrf_token %}
+                                <input type="hidden" name="table_id" value="{{ table_id }}">
+                                <button type="submit" class="btn btn-primary"> Increase </button>
+                            </form>
                         </div>
                         <div class="col-2">
-                            <div class="btn btn-primary">-</div>
+                            <form method="post" action="{% url 'decrease_order' product.id %}">
+                                {% csrf_token %}
+                                <input type="hidden" name="table_id" value="{{ table_id }}">
+                                <button type="submit" class="btn btn-primary"> Decrease </button>
+                            </form>
                         </div>
                     </div>
                 {% endfor %}
