--- a/root/templates/tables/tables.html
+++ b/root/templates/tables/tables.html
@@ -5,9 +5,9 @@
   <div class="container text-center">
     <div class="row mt-4">
       <div class="col">
-        <div class="btn btn-primary rounded-pill px-3">
+        <a href="1/menu" class="btn btn-primary rounded-pill px-3" table_id = "1">
           <h3>Table 1</h3>
-        </div>
+        </a>
       </div>
 
       <div class="col">
