--- a/root/templates/tables/menu.html
+++ b/root/templates/tables/menu.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block content %}
-    
-    <div class="container text-center">
+    <div class="row mt-4">
+        <div class="container text-center">
                 {% for product in products %}
                     <div class="row mb-4 text-center">
                         <div class="col-2">
@@ -28,5 +28,14 @@
                         </div>
                     </div>
                 {% endfor %}
+        </div>
+    </div>
+    <div class="row mt-1">
+        <div class="container text-center">
+            {% for item in menu_item %}
+                <h1> Table {{ table_id }} </h1>
+                <h2> Menu {{ products.self.name }}</h2>
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
