working on orders ui

--- a/root/templates/orders/order_menu.html
+++ b/root/templates/orders/order_menu.html
@@ -6,6 +6,13 @@
         <div class="container text-center">
             <h1> Given Orders</h1>
             <h2> Order-1</h2>
+            {% for menu in menu_items %}
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5> {{ menu.menu_item.price    }} </h5>
+                    </div>
+                </div>
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
