--- a/root/templates/tables/tables.html
+++ b/root/templates/tables/tables.html
@@ -11,53 +11,15 @@
       </div>
 
       <div class="col">
-        <div class="btn btn-primary rounded-pill px-3">
+        <a href="2/menu" class="btn btn-primary rounded-pill px-3" table_id = "2">
           <h3>Table 2</h3>
-        </div>
+        </a>
       </div>
 
       <div class="col">
-        <div class="btn btn-primary rounded-pill px-3">
+        <a href="3/menu" class="btn btn-primary rounded-pill px-3" table_id = "3">
           <h3>Table 3</h3>
-        </div>
-      </div> 
-    </div>
-    <div class="row mt-4">
-      <div class="col">
-        <div class="btn btn-primary rounded-pill px-3">
-          <h3>Table 4</h3>
-        </div>
-      </div>
-
-      <div class="col">
-        <div class="btn btn-primary rounded-pill px-3">
-          <h3>Table 5</h3>
-        </div>
-      </div>
-
-      <div class="col">
-        <div class="btn btn-primary rounded-pill px-3">
-          <h3>Table 6</h3>
-        </div>
-      </div> 
-    </div>
-    <div class="row mt-4">
-      <div class="col">
-        <div class="btn btn-primary rounded-pill px-3">
-          <h3>Table 7</h3>
-        </div>
-      </div>
-
-      <div class="col">
-        <div class="btn btn-primary rounded-pill px-3">
-          <h3>Table 8</h3>
-        </div>
-      </div>
-
-      <div class="col">
-        <div class="btn btn-primary rounded-pill px-3">
-          <h3>Table 9</h3>
-        </div>
+        </a>
       </div> 
     </div>
   </div>
